VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc18Up.err
[8MB/455.2MB][  1%][>                                                 ][4MB/s]  [16MB/455.2MB][  3%][=>                                                ][5.333MB/s]  [32MB/455.2MB][  7%][===>                                              ][8MB/s]  [40MB/455.2MB][  8%][====>                                             ][8MB/s]  [48MB/455.2MB][ 10%][=====>                                            ][8MB/s]  [56MB/455.2MB][ 12%][======>                                           ][8MB/s]  [64MB/455.2MB][ 14%][=======>                                          ][8MB/s]  [72MB/455.2MB][ 15%][=======>                                          ][7.2MB/s]  [80MB/455.2MB][ 17%][========>                                         ][7.273MB/s]  [88MB/455.2MB][ 19%][=========>                                        ][6.769MB/s]  [96MB/455.2MB][ 21%][==========>                                       ][6.857MB/s]  [104MB/455.2MB][ 22%][===========>                                      ][6.933MB/s]  [112MB/455.2MB][ 24%][============>                                     ][6.588MB/s]  [120MB/455.2MB][ 26%][=============>                                    ][6.667MB/s]  [128MB/455.2MB][ 28%][==============>                                   ][6.737MB/s]  [136MB/455.2MB][ 29%][==============>                                   ][6.476MB/s]  [144MB/455.2MB][ 31%][===============>                                  ][6.261MB/s]  [152MB/455.2MB][ 33%][================>                                 ][6.333MB/s]  [160MB/455.2MB][ 35%][=================>                                ][6.154MB/s]  [168MB/455.2MB][ 36%][==================>                               ][6.222MB/s]  [176MB/455.2MB][ 38%][===================>                              ][6.069MB/s]  [184MB/455.2MB][ 40%][====================>                             ][5.935MB/s]  [192MB/455.2MB][ 42%][=====================>                            ][5.818MB/s]  [200MB/455.2MB][ 43%][=====================>                            ][5.882MB/s]  [208MB/455.2MB][ 45%][======================>                           ][5.778MB/s]  [216MB/455.2MB][ 47%][=======================>                          ][5.684MB/s]  [224MB/455.2MB][ 49%][========================>                         ][5.6MB/s]  [232MB/455.2MB][ 50%][=========================>                        ][5.524MB/s]  [240MB/455.2MB][ 52%][==========================>                       ][5.455MB/s]  [248MB/455.2MB][ 54%][===========================>                      ][5.391MB/s]  [256MB/455.2MB][ 56%][============================>                     ][5.333MB/s]  [264MB/455.2MB][ 57%][============================>                     ][5.28MB/s]  [272MB/455.2MB][ 59%][=============================>                    ][5.132MB/s]  [280MB/455.2MB][ 61%][==============================>                   ][5.091MB/s]  [288MB/455.2MB][ 63%][===============================>                  ][4.966MB/s]  [296MB/455.2MB][ 65%][================================>                 ][4.852MB/s]  [304MB/455.2MB][ 66%][=================================>                ][4.75MB/s]  [312MB/455.2MB][ 68%][==================================>               ][4.588MB/s]  [320MB/455.2MB][ 70%][===================================>              ][4.507MB/s]  [328MB/455.2MB][ 72%][====================================>             ][4.432MB/s]  [336MB/455.2MB][ 73%][====================================>             ][4.308MB/s]  [344MB/455.2MB][ 75%][=====================================>            ][4.195MB/s]  [352MB/455.2MB][ 77%][======================================>           ][4.141MB/s]  [360MB/455.2MB][ 79%][=======================================>          ][4MB/s]  [368MB/455.2MB][ 80%][========================================>         ][3.874MB/s]  [376MB/455.2MB][ 82%][=========================================>        ][3.76MB/s]  [384MB/455.2MB][ 84%][==========================================>       ][3.657MB/s]  [392MB/455.2MB][ 86%][===========================================>      ][3.564MB/s]  [400MB/455.2MB][ 87%][===========================================>      ][3.478MB/s]  [408MB/455.2MB][ 89%][============================================>     ][3.429MB/s]  [416MB/455.2MB][ 91%][=============================================>    ][3.382MB/s]  [424MB/455.2MB][ 93%][==============================================>   ][3.365MB/s]  [432MB/455.2MB][ 94%][===============================================>  ][3.298MB/s]  [440MB/455.2MB][ 96%][================================================> ][3.235MB/s]  [448MB/455.2MB][ 98%][=================================================>][3.177MB/s]  [455.2MB/455.2MB][100%][==================================================][3.139MB/s]  [455.2MB/455.2MB][100%][==================================================][3.118MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_64231/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_64231/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
